disallow_host_ports/new_kyverno_policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-ports
  annotations:
    policies.kyverno.io/title: Disallow hostPorts
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    kyverno.io/kyverno-version: 1.6.0
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.kyverno.io/description: >-
      Access to host ports allows potential snooping of network traffic and should not be
      allowed, or at minimum restricted to a known list. This policy ensures the `hostPort`
      field is unset or set to `0`.       
spec:
  validationFailureAction: audit
  background: true
  rules:
    - name: host-ports-none
      match:
        any:
        - resources:
            kinds:
              - Pod
      celvalidations:
      - expression: "object.spec.containers.all(container, !(has(container.ports) && !container.ports.all(port, !(has(port.hostPort) && !(port.hostPort == 0)))))"
        message: "The fields spec.containers[*].ports[*].hostPort must either be unset or set to `0`"
      - expression: "!(has(object.spec.initContainers) && !object.spec.initContainers.all(container, !(has(container.ports) && !container.ports.all(port, !(has(port.hostPort) && !(port.hostPort == 0))))))"
        message: "The fields spec.initContainers[*].ports[*].hostPort must either be unset or set to `0`"
      - expression: "!(has(object.spec.ephemeralContainers) && !object.spec.ephemeralContainers.all(container, !(has(container.ports) && !container.ports.all(port, !(has(port.hostPort) && !(port.hostPort == 0))))))"
        message: "The fields spec.ephemeralContainers[*].ports[*].hostPort must either be unset or set to `0`"
