disallow_host_ports/validating_admission_policy_binding.yaml
apiVersion: admissionregistration.k8s.io/v1alpha1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "disallow-host-ports-binding"
spec:
  policyName: "disallow-host-ports"
  validationActions: [Audit]
